# Workspace file for some.com

skylib_version = "1.0.3"
rules_scala_version = "5df8033f752be64fbe2cedfd1bdbad56e2033b15"
RULES_JVM_EXTERNAL_TAG = "4.0"
RULES_JVM_EXTERNAL_SHA = "31701ad93dbfe544d597dbe62c9a1fdd76d81d8a9150c2bf1ecf928ecdf97169"

# Load internal
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Install external
# - skylib
http_archive(
    name = "bazel_skylib",
    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
    type = "tar.gz",
    url = "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/{}/bazel-skylib-{}.tar.gz".format(skylib_version, skylib_version),
)

# - rules_scala
http_archive(
    name = "io_bazel_rules_scala",
    sha256 = "b7fa29db72408a972e6b6685d1bc17465b3108b620cb56d9b1700cf6f70f624a",
    strip_prefix = "rules_scala-%s" % rules_scala_version,
    type = "zip",
    url = "https://github.com/bazelbuild/rules_scala/archive/%s.zip" % rules_scala_version,
)

# - rules_jvm_external
http_archive(
    name = "rules_jvm_external",
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    sha256 = RULES_JVM_EXTERNAL_SHA,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)


# Load & Init

load("@io_bazel_rules_scala//:scala_config.bzl", "scala_config")
scala_config(scala_version = "2.12.12")

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_repositories")
scala_repositories()

load("@io_bazel_rules_scala//scala:toolchains.bzl", "scala_register_toolchains")
scala_register_toolchains()

# optional: setup ScalaTest toolchain and dependencies
load("@io_bazel_rules_scala//testing:scalatest.bzl", "scalatest_repositories", "scalatest_toolchain")
scalatest_repositories()
scalatest_toolchain()

load("@rules_jvm_external//:defs.bzl", "maven_install")
load("@rules_jvm_external//:specs.bzl", "maven")

# Dependencies helpers
borer_version  = "1.6.3"
spark_version  = "3.0.2"
excluded_loggers = [
    "org.slf4j:slf4j-log4j12",
    "log4j:log4j"
]

# Dependencies
borer_core = "io.bullet:borer-core_2.12:%s" % borer_version
borer_derivation = "io.bullet:borer-derivation_2.12:%s" % borer_version

scala_logging = "com.typesafe.scala-logging:scala-logging_2.12:3.9.2"

spark_sql = maven.artifact(
    group = "org.apache.spark",
    artifact = "spark-sql_2.12",
    version = spark_version,
    exclusions = excluded_loggers,
    neverlink = True
)

# Install dependencies

maven_install(
    name = "some_maven",
    artifacts = [
        borer_core,
        borer_derivation,
        scala_logging,
        spark_sql
    ],
    repositories = ["https://repo1.maven.org/maven2"],
    fetch_sources = True
)
