# Build file for some-package package
#
# Targets:
#   - some_borrer
#

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
    name = "some_borrer",
    srcs = glob(["src/main/**/*.scala"]),
    unused_dependency_checker_mode = "warn",
    deps = [
        "@some_maven//:io_bullet_borer_core_2_12",
        "@some_maven//:io_bullet_borer_derivation_2_12",
        kafka_clients,
        scala_logging,
        tagging,
    ]
)
