# Build file for some-package package
#
# Targets:
#   - some_logger
#

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]),
    unused_dependency_checker_mode = "warn",
    deps = [
        "@some_maven//:com_typesafe_scala_logging_scala_logging_2_12"
    ]
)
